fixed issue where terminal margin caused overlap with navbar

--- a/src/components/about/Terminal.module.scss
+++ b/src/components/about/Terminal.module.scss
@@ -11,6 +11,13 @@
   }
 }
 
+.terminal:first-of-type {
+  margin-top: 6rem;
+  @media only screen and (min-width: 940px) {
+    margin-top: 6rem;
+  }
+}
+
 .topRow {
   background-color: #bdc6ce;
   color: white;
